# pdk-custom-policy-examples

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  run_tests.sh  test-all-playgrounds.sh  test-playground-common.sh
.scripts/: build.sh  (+7 more)
agent-policies/: .gitignore  Cargo.toml  Demo.md  Makefile  README.md  setup-business-group.sh
agent-policies/.cargo/: config.toml
agent-policies/a2a-pii-detector-policy/: Cargo.toml  Makefile  README.md
agent-policies/a2a-pii-detector-policy/definition/: gcl.yaml
agent-policies/a2a-pii-detector-policy/src/: lib.rs  pii.rs
agent-policies/a2a-prompt-decorator-policy/: Cargo.toml  Makefile  README.md
agent-policies/a2a-prompt-decorator-policy/definition/: gcl.yaml
agent-policies/a2a-prompt-decorator-policy/playground/: docker-compose.yaml
agent-policies/a2a-prompt-decorator-policy/src/: lib.rs
agent-policies/a2a-support-policy/: Cargo.toml  Makefile  README.md
agent-policies/a2a-support-policy/definition/: gcl.yaml
agent-policies/a2a-support-policy/src/: lib.rs
agent-policies/agent-core/: Cargo.toml
agent-policies/agent-core/schema/: a2a.json
agent-policies/agent-core/src/: attributes.rs  http_utils.rs  lib.rs
agent-policies/agent-core/tmp/: out.json  tiers.json
agent-policies/mcp-support-policy/: Cargo.toml  Makefile  README.md
agent-policies/mcp-support-policy/definition/: gcl.yaml
agent-policies/mcp-support-policy/src/: lib.rs
agent-policies/mcp-support-policy/tests/: requests.rs
ai-basic-token-rate-limiting/: Cargo.toml  Makefile  README.md  test-playground.sh
ai-basic-token-rate-limiting/definition/: gcl.yaml
ai-basic-token-rate-limiting/src/: lib.rs  openai.rs  validator.rs
ai-basic-token-rate-limiting/tests/: requests.rs
ai-prompt-template/: Cargo.toml  README.md  test-playground.sh
ai-prompt-template/definition/: gcl.yaml
ai-prompt-template/src/: applicator.rs  applier.rs  lib.rs  openai.rs
ai-prompt-template/tests/: requests.rs
certs/: Cargo.toml  Makefile  README.md  test-playground.sh
certs/definition/: gcl.yaml
certs/playground/: docker-compose.yaml
certs/src/: lib.rs
certs/tests/: common.rs  requests.rs
client-id-enforcement/: Cargo.toml  Makefile  README.md
client-id-enforcement/.cargo/: config.toml
client-id-enforcement/definition/: gcl.yaml
client-id-enforcement/playground/: docker-compose.yaml
client-id-enforcement/src/: lib.rs
client-id-enforcement/tests/: requests.rs
crypto/: Cargo.toml  Makefile  README.md  make-test-output.txt  test-playground.sh
crypto/definition/: gcl.yaml
crypto/playground/: docker-compose.yaml
crypto/src/: lib.rs
crypto/tests/: common.rs  requests.rs
data-caching/: .gitignore  Cargo.toml  Makefile  README.md  test-playground.sh
data-caching/.cargo/: config.toml
data-caching/definition/: gcl.yaml
data-caching/src/: lib.rs
data-caching/tests/: common.rs  requests.rs
json-validation/: Cargo.toml  README.md  test-playground.sh
json-validation/definition/: gcl.yaml
json-validation/playground/: docker-compose.yaml
json-validation/src/: lib.rs
jwt-generation/: Cargo.toml  Makefile  README.md  test-playground.sh
jwt-generation/definition/: gcl.yaml
jwt-generation/src/: lib.rs
jwt-generation/tests/: requests.rs
jwt-validation/: Cargo.toml  Makefile  README.md  test-playground.sh
jwt-validation/definition/: gcl.yaml
jwt-validation/playground/: docker-compose.yaml
jwt-validation/src/: lib.rs
jwt-validation/tests/: common.rs  requests.rs
metrics/: Cargo.toml  README.md  test-playground.sh
metrics/definition/: gcl.yaml
metrics/src/: lib.rs
metrics/tests/: common.rs  requests.rs
multi-instance-rate-limiting/: Cargo.toml  Makefile  README.md  test-playground.sh
multi-instance-rate-limiting/definition/: gcl.yaml
multi-instance-rate-limiting/playground/: README.md  docker-compose.yaml  test-clustered-fast.sh  test-clustered.sh
multi-instance-rate-limiting/src/: lib.rs
multi-instance-rate-limiting/tests/: requests.rs
oauth-2-token-introspection/: Cargo.toml  Makefile  README.md  test-playground.sh
oauth-2-token-introspection/definition/: gcl.yaml
oauth-2-token-introspection/playground/: docker-compose.yaml
oauth-2-token-introspection/src/: lib.rs
oauth-2-token-introspection/tests/: requests.rs
policy-violation/: Cargo.toml  README.md
policy-violation/definition/: gcl.yaml
policy-violation/src/: lib.rs
rate-limiting/: Cargo.toml  README.md
rate-limiting/definition/: gcl.yaml
rate-limiting/src/: lib.rs
rate-limiting/tests/: requests.rs
simple-oauth-2-validation/: .gitignore  Cargo.toml  Makefile  README.md  test-playground.sh
simple-oauth-2-validation/.cargo/: config.toml
simple-oauth-2-validation/definition/: gcl.yaml
simple-oauth-2-validation/playground/: docker-compose.yaml
simple-oauth-2-validation/src/: lib.rs
simple-oauth-2-validation/test/: docker-compose.yaml
simple-oauth-2-validation/tests/: common.rs  requests.rs
spike/: Cargo.toml  Makefile  README.md  test-playground.sh
spike-control/: Cargo.toml  README.md  test-playground.sh
spike-control/definition/: gcl.yaml
spike-control/playground/: docker-compose.yaml
spike-control/src/: lib.rs
spike/definition/: gcl.yaml
spike/src/: lib.rs
spike/tests/: common.rs  requests.rs
stop-iteration/: Cargo.toml  Makefile  README.md  test-playground.sh
stop-iteration/definition/: gcl.yaml
stop-iteration/playground/: docker-compose.yaml
stop-iteration/src/: lib.rs
stop-iteration/tests/: requests.rs
stream-payload/: Cargo.toml  README.md  test-playground.sh
stream-payload/definition/: gcl.yaml
stream-payload/src/: lib.rs
stream-payload/tests/: common.rs  requests.rs
tls-calls/: Cargo.toml  Makefile  README.md  test-playground.sh
tls-calls/definition/: gcl.yaml
tls-calls/playground/: docker-compose.yaml
tls-calls/src/: lib.rs
websocket/: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
websocket-frame-counter/: Cargo.toml
websocket/.cargo/: config.toml
websocket/definition/: gcl.yaml
websocket/playground/: docker-compose.yaml
websocket/src/: lib.rs
(+338 files in other folders)
