# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "ai_basic_token_rate_limiting"
version = "1.0.0"
rust-version = "1.83.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "edce8390-cbc6-4b53-af21-b1991d7a14bc"
definition_asset_id = "ai-basic-token-rate-limiting"
implementation_asset_id = "ai-basic-token-rate-limiting-flex"

[dependencies]
pdk = { version = "1.2.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tiktoken-rs = "0.5.8"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
pdk-test = { version = "1.2.0", registry = "anypoint" }
httpmock = "0.7"
reqwest = { version = "0.11", features = [ "json" ] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
