# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "ai_prompt_template"
version = "1.0.0"
rust-version = "1.88.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "edce8390-cbc6-4b53-af21-b1991d7a14bc"
definition_asset_id = "ai-prompt-template"
implementation_asset_id = "ai-prompt-template-flex"

[dependencies]
pdk = { version = "1.7.0-alpha.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
regex = "1.11"

[dev-dependencies]
pdk-test = { version = "1.7.0-alpha.0" }
httpmock = "0.6"
reqwest = { version = "0.11", features = ["json"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
