# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "certs"
version = "1.0.1"
rust-version = "1.88.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "f7a576be-e707-4ce3-9c68-3432d591846c"
definition_asset_id = "certs"
implementation_asset_id = "certs-flex"

[dependencies]
pdk = { version = "1.7.0-alpha.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.7.0-alpha.0" }
httpmock = "0.6"
reqwest = { version = "0.11", features = ["default", "rustls-tls"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
