# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "client_id_enforcement"
version = "1.0.0"
rust-version = "1.83.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "f591a0db-065b-4f59-ac40-5cbe5a6f5915"
definition_asset_id = "client-id-enforcement"
implementation_asset_id = "client-id-enforcement-flex"

[dependencies]
pdk = {path = "../../mgw-policy-development-kit/pdk", package = "pdk"} # { version = "1.3.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = { version = "0.3" }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { path = "../../mgw-policy-development-kit/pdk-test", package = "pdk-test", features = ["experimental"]}
httpmock = "0.6"
reqwest = { version = "0.11", features = ["json"]}
tokio = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
