# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "crypto"
version = "1.0.0"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "f7a576be-e707-4ce3-9c68-3432d591846c"
definition_asset_id = "crypto"
implementation_asset_id = "crypto-flex"

[dependencies]
pdk = { version = "1.0.0-rc.3", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
hex = "0.4"
rsa = "0.9.6"
aes-gcm = "0.10.3"

[dev-dependencies]
pdk-test = { version = "1.0.0-rc.3", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
