# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "data_caching"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdk = { version = "1.0.0-beta.1", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
chrono = {version = "0.4.26", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
