# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "jwt_generation"
version = "1.0.0"
rust-version = "1.87.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "c5882134-2454-4663-a9c7-2ff11fd17c41"
definition_asset_id = "jwt-generation"
implementation_asset_id = "jwt-generation-flex"

[dependencies]
pdk = { git = "https://github.com/mulesoft-emu/mgw-policy-development-kit.git", branch = "W-20540433", package = "pdk"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
