# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "metrics"
version = "1.0.0"
rust-version = "1.88.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "f7a576be-e707-4ce3-9c68-3432d591846c"
definition_asset_id = "metrics"
implementation_asset_id = "metrics-flex"

[dependencies]
pdk = { git = "https://github.com/mulesoft-emu/mgw-policy-development-kit.git", tag = "1.7.0-rc.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
pdk-test = { git = "https://github.com/mulesoft-emu/mgw-policy-development-kit.git", tag = "1.7.0-rc.0"}
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
