# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "policy_violation"
version = "1.0.0"
rust-version = "1.87.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "43573332-0364-41f2-9486-d1248f3b4023"
definition_asset_id = "policy-violation"
implementation_asset_id = "policy-violation-flex"

[dependencies]
pdk = { version = "1.4.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.4.0", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
