# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "simple_oauth_2_validation"
version = "1.0.0"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "3ec46a72-4c44-489e-9ff5-8458b345f7a7"
definition_asset_id = "simple-oauth-2-validation"
asset_id = "simple-oauth-2-validation-flex-gateway"

[dependencies]
pdk = { path = "../../mgw-policy-development-kit/pdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_urlencoded = "0.7.0"
anyhow = "1.0"

[dev-dependencies]
pdk-test = { path = "../../mgw-policy-development-kit/pdk-test" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
