# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "spike_control"
version = "1.0.0"
rust-version = "1.88.0"
edition = "2018"

[package.metadata.anypoint]
group_id = "edce8390-cbc6-4b53-af21-b1991d7a14bc"
definition_asset_id = "spike-control"
implementation_asset_id = "spike-control-flex"

[dependencies]
pdk = { git = "https://github.com/mulesoft-emu/mgw-policy-development-kit.git", rev = "5cf18baea39f787ea3aafa4555bde89283281187", version = "1.8.0-rc.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { git = "https://github.com/mulesoft-emu/mgw-policy-development-kit.git", rev = "5cf18baea39f787ea3aafa4555bde89283281187" }
pdk-unit = { git = "https://github.com/mulesoft-emu/mgw-policy-development-kit.git", rev = "5cf18baea39f787ea3aafa4555bde89283281187" }

httpmock = "0.6"
reqwest = "0.11"
futures = "0.3.30"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
