# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "stream_payload"
version = "1.0.0"
rust-version = "1.83.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "f7a576be-e707-4ce3-9c68-3432d591846c"
definition_asset_id = "stream-payload"
implementation_asset_id = "stream-payload-flex"

[dependencies]
pdk = { git = "ssh://git@github.com/mulesoft-emu/mgw-policy-development-kit.git", rev = "213d221fefa2b6775505f831ef144a38f63f7c3d" } # TODO revert .cargo/config.toml git-fetch-with-cli to true on point to release
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { git = "ssh://git@github.com/mulesoft-emu/mgw-policy-development-kit.git", rev = "213d221fefa2b6775505f831ef144a38f63f7c3d" } # TODO revert .cargo/config.toml git-fetch-with-cli to true on point to release
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
