# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "a2a_card_rewire_policy"
version = "1.0.20"
rust-version = "1.83.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[package.metadata.anypoint]
group_id = "02eb9b5f-bfb9-4da5-85e2-51dc1747d7a8"
definition_asset_id = "a-two-a-support-policy"
implementation_asset_id = "a-two-a-support-wasm"

[dependencies]
agent-core = {workspace = true}
pdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc","raw_value"] }
anyhow = { workspace = true }
mime = { workspace = true }




