# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "agent-core"
version = "1.0.0"
rust-version = "1.88.0"
edition = "2018"


[lib]
crate-type = ["lib"]

[dependencies]
pdk = { workspace = true, features = ["ll"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc", "raw_value"] }
anyhow = { workspace = true }
futures = "0.3.31"
chrono = "0.4.40"



